feat: attach learning data to round words in match state